fixed styling so shade is not cut off before bottom of screen

--- a/client/src/styles/components/_editlist.scss
+++ b/client/src/styles/components/_editlist.scss
@@ -1,7 +1,9 @@
 @use './../variables' as v;
 
 .editListWrapper {
+    position: relative;
     width: 100%;
+    max-height: 600px;
     border: 1px solid v.$red;
     background-color: v.$light-grey;
     cursor: default;
@@ -9,11 +11,12 @@
     overflow-y: scroll;
     padding-bottom: 10px;
     .editListName {
-        font-size: 30px;
+        font-size: 20px;
         font-family: v.$font2;
         text-align: center;
         margin: 10px 0;
         background-color: v.$transparent-blue;
+        transform: translateX(-7.5px);
     }
     .addToEditContainer {
         @include v.flex(center, center, 0);
@@ -65,13 +68,15 @@
     }
     .editList {
         @include v.flex(flex-start, center, column);
-        max-height: 600px;
         input {
             background-color: v.$transparent-yellow;
         }
     }
     .saveEdit {
         @include v.button1(v.$transparent-green, black, v.$font2);
+        position: fixed;
+        top: 35px;
+        left: 20px;
         font-size: 18px;
         padding: 0 5px;
         border-radius: 3px;
